Fix toolbar width on small devices

--- a/react/admin/src/Email/ComposeOverlay/ComposeOverlay.css
+++ b/react/admin/src/Email/ComposeOverlay/ComposeOverlay.css
@@ -77,7 +77,7 @@ form.compose-overlay div.composer-toolbar {
     width: 28em;
   }
   form.compose-overlay div.composer-toolbar {
-    width: 27em;
+    width: 28em;
   }
   form.compose-overlay input[type=text] {
     width: 27em;
